tests/invalid_nodepend/unicode_1.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module unicode_1.

:- interface.

:- type '\uabxy' == int.
