tests/invalid_nodepend/unicode_1.err_exp
unicode_1.m:005: Warning: the interface of module `unicode_1' does not export
unicode_1.m:005:   anything.
unicode_1.m:009: Syntax error at token 'int': operator or `.' expected.
unicode_1.m:009: Syntax error: invalid hex character in Unicode escape.
For more information, recompile with `-E'.
